Anchor Lookup Should Not Cross Shadow Boundaries
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox145 | --- | fixed |
People
(Reporter: dshin, Assigned: jari)
References
(Blocks 1 open bug)
Details
(Whiteboard: [anchorpositioning:m2])
Attachments
(1 file)
Expected to work as of bug 1924200.
Comment 1•4 months ago
|
||
Jari, would you be able to take a look at this?
| Reporter | ||
Comment 2•4 months ago
•
|
||
I think this is a side effect of missing this little part of the spec:
The anchor name is a tree-scoped name, while anchor spec is a tree-scoped reference.
This means we probably require keeping track of shadow root/document root of the declaration. From my experience with @scope and implicit root, this could get tricky, esp. due to shadow DOM stylesheet sharing - See changes associated with this code.
We could cheat and block referencing anchors across shadow boundaries, but then /css/css-anchor-position/anchor-name-cross-shadow.html would start failing. In fact, that test makes me think that we can't really cheat our way out of tracking the declaration site.
| Reporter | ||
Comment 3•4 months ago
|
||
Ok. I am splitting this ticket is two:
- Disallow anchor references from crossing shadow boundaries altogether (This ticket): We're overly permissive right now. Should change this ASAP.
- Do the actual tree-scope resolution (Bug 1988038).
This affects our path forward for Bug 1986602 as well.
| Assignee | ||
Comment 4•4 months ago
|
||
I'll look into this.
| Assignee | ||
Comment 5•4 months ago
|
||
Updated•4 months ago
|
Comment 7•4 months ago
|
||
| bugherder | ||
Updated•3 months ago
|
Description
•