Bug 1987926: Anchor lookup should mind cross shadow boundaries. r=layout-anchor-positioning-reviewers,layout-reviewers,dshin

Differential Revision: https://phabricator.services.mozilla.com/D264813